objects/Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Object_Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Object Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Date__c</fullName>
        <label>Custom Object Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Email__c</fullName>
        <label>Custom Object Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Phone__c</fullName>
        <label>Custom Object Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Custom_Object_Text_Field__c</fullName>
        <label>Custom Object Text Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Custom Object</label>
    <nameField>
        <label>Custom Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>